--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background: #659999; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to top,
+    #659999,
+    #f4791f
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #659999, #f4791f);
+}
