--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
           ></textarea>
         </div>
 
-        <button (click)="addOrEdit()" class="btn btn-primary">
+        <button (click)="addOrEdit()">
           Submit
         </button>
         <button (click)="delete()">
