--- a/src/styles.css
+++ b/src/styles.css
@@ -6,4 +6,5 @@ body {
     #f4791f
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to top, #659999, #f4791f);
+  font-family: sans-serif;
 }
